--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.1"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
@@ -28,12 +29,15 @@
     "@types/react-dom": "^16.9.10",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "rollup": "^2.75.7",
+    "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-typescript2": "^0.32.1",
     "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build-example": "react-scripts build",
-    "build": "tsc ./src/useDraggable.ts -d --outDir ./dist",
+    "build": "rollup -c",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
