--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
     "type": "git",
     "url": "git+https://github.com/dyon21/react-useDraggable-hook.git"
   },
-  "dependencies": {
-    "react": "^17.0.1"
-  },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@testing-library/jest-dom": "^5.11.8",
@@ -27,6 +24,7 @@
     "@types/node": "^12.19.12",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "rollup": "^2.75.7",
